--- a/package.json
+++ b/package.json
@@ -4,18 +4,38 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-element": "^1.2.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-vector-icons": "^6.4.18"
   },
   "private": true
 }
